--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,6 +11,7 @@
 </head>
 <body>
   <div id="root"><%- initialMarkup -%></div>
-  <script src="/bundle.js" charset="UTF-8"></script> 
+  <script src="/vendor.js?version=1" charset="UTF-8"></script> 
+  <script src="/app.js?version=1" charset="UTF-8"></script> 
 </body>
 </html>
